--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,9 +25,9 @@ classifiers = [
     "Topic :: Software Development :: Libraries :: Python Modules",
 ]
 dependencies = [
-    "gymnasium == 0.28.1",
-    "gymnasium-robotics == 1.2.2",
-    "pygame == 2.1.0",
+    "gymnasium >= 0.28.1",
+    "gymnasium-robotics >= 1.2.2",
+    "pygame >= 2.1.0",
     "mujoco == 2.3.3",
     "xmltodict >= 0.13.0",
     "pyyaml >= 6.0",
